--- a/quizzy-app/src/Components/Quiz/Quiz.css
+++ b/quizzy-app/src/Components/Quiz/Quiz.css
@@ -1,18 +1,22 @@
 h1 {
-  font-size: 3.2em;
+  font-size: clamp(2.375rem, 5vw + 1rem, 4.875rem);
   line-height: 1.1;
   font-family: Silkscreen, monospace;
   font-weight: 700;
-  color: whitesmoke;
-  text-shadow: 1px 1px 1px lightgray;
+  color: rgb(46, 7, 74);
+  text-shadow: 2px 2px 1px lightgray, 1px 1px 1px black;
+  text-rendering: optimizeLegibility;
 }
 h2 {
-  font-size: 2rem;
+  font-size: clamp(1.375rem, 1vw + 1rem, 3rem);
   line-height: 1.1;
   font-family: "Nunito Sans", sans-serif;
-  font-weight: 400;
+  font-weight: 300;
+  text-rendering: optimizeLegibility;
   color: whitesmoke;
   text-shadow: 1px 1px 1px lightgray;
+  padding: 1rem;
+  background-color: rgba(53, 6, 86, 0.871);
 }
 ul li {
   list-style-type: none;
@@ -20,14 +24,15 @@ ul li {
   font-size: 1.5rem;
   line-height: 1.5;
   font-family: "Nunito Sans", sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   padding: 0.5rem 1rem;
   margin: 0.65rem;
   color: whitesmoke;
-  background-color: rgba(47, 79, 79, 0.507);
-  border: 1px solid rgba(47, 79, 79);
+  background-color: rgba(47, 79, 79, 0.865);
+  border: 1px solid rgb(26, 63, 63);
+  text-rendering: optimizeLegibility;
   border-radius: 5px;
-  text-shadow: 1px 1px 0 darkslategrey;
+  text-shadow: 1px 1px 0 black;
   cursor: pointer;
 }
 .container {
@@ -38,18 +43,31 @@ ul li {
   text-justify: inter-word;
   align-items: center;
   align-content: center;
-  font-family: "Roboto", sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 400;
-  padding: 2em;
+  color: white;
+  font-size: 1.1rem;
+  width: 100%;
+  height: 100vh;
+  padding: 1em;
   margin: 0 auto;
 }
 hr {
   width: 100%;
-  border: 3px solid #646cff;
+  border: 5px solid rgb(46, 7, 74);
 }
 
 ul li {
-  list-style-type: lower-latin;
+  list-style: "none";
+  list-style: "➽ ";
+  list-style-position: inside;
+  font-size: clamp(1rem, 1vw + 1rem, 2.25rem);
+  line-height: 1.4;
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 400;
+  padding: 0.5rem 1rem;
+  margin: 0.6rem;
+  color: whitesmoke;
 }
 
 button {
@@ -72,7 +90,7 @@ button {
 }
 
 button:hover {
-  background-color: transparent;
+  background-color: rgb(32, 15, 45);
   color: darkslategrey;
 }
 
