--- a/quizzy-app/src/index.css
+++ b/quizzy-app/src/index.css
@@ -3,22 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
   color: rgb(12, 12, 12);
-  background-image: linear-gradient(
-    to right top,
-    #d16ba5,
-    #c777b9,
-    #ba83ca,
-    #aa8fd8,
-    #9a9ae1,
-    #8aa7ec,
-    #79b3f4,
-    #69bff8,
-    #52cffe,
-    #41dfff,
-    #46eefa,
-    #5ffbf1
-  );
-
+  background-color: #101011;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -31,19 +16,12 @@
 }
 
 body {
-  margin: 0;
+  width: 80%;
+  height: 100vh;
+  margin: 0 auto;
   padding: 0;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  border-left: 3px groove #121514;
+  border-right: 3px groove #121514;
+  background-color: #00bb77;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='232' height='232' viewBox='0 0 120 120'%3E%3Cpolygon fill='%23000' fill-opacity='0.28' points='120 0 120 60 90 30 60 0 0 0 0 0 60 60 0 120 60 120 90 90 120 60 120 0'/%3E%3C/svg%3E");
 }
